--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 base="dark"
-primaryColor="#8AE234"      # verde “ok”
+primaryColor="#8AE234"
 backgroundColor="#0F1115"
 secondaryBackgroundColor="#161A22"
 textColor="#E6E6E6"
